# sim-logger

./: CMakeLists.txt  README.md
logger_core/: CMakeLists.txt
logger_core/include/logger/: dummy_time_source.hpp  file_sink.hpp  level.hpp  log_record.hpp  posix_time_source.hpp  rotating_file_sink.hpp  time_source.hpp
logger_core/src/: dummy_time_source.cpp  file_sink.cpp  level.cpp  posix_time_source.cpp  rotating_file_sink.cpp
tests/: CMakeLists.txt  test_level.cpp  test_log_record.cpp  test_rotating_file_sink.cpp  test_sprint2_logger_registry.cpp  test_time_source.cpp
